docs/1.1rc1/_sources/api/gammapy.astro.population.Paczynski1990Velocity.rst.txt
Paczynski1990Velocity
=====================

.. currentmodule:: gammapy.astro.population

.. autoclass:: Paczynski1990Velocity
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Paczynski1990Velocity.amplitude
      ~Paczynski1990Velocity.bbox_with_units
      ~Paczynski1990Velocity.bounding_box
      ~Paczynski1990Velocity.bounds
      ~Paczynski1990Velocity.col_fit_deriv
      ~Paczynski1990Velocity.cov_matrix
      ~Paczynski1990Velocity.eqcons
      ~Paczynski1990Velocity.fit_deriv
      ~Paczynski1990Velocity.fittable
      ~Paczynski1990Velocity.fixed
      ~Paczynski1990Velocity.has_user_bounding_box
      ~Paczynski1990Velocity.has_user_inverse
      ~Paczynski1990Velocity.ineqcons
      ~Paczynski1990Velocity.input_units
      ~Paczynski1990Velocity.input_units_allow_dimensionless
      ~Paczynski1990Velocity.input_units_equivalencies
      ~Paczynski1990Velocity.input_units_strict
      ~Paczynski1990Velocity.inputs
      ~Paczynski1990Velocity.inverse
      ~Paczynski1990Velocity.linear
      ~Paczynski1990Velocity.meta
      ~Paczynski1990Velocity.model_constraints
      ~Paczynski1990Velocity.model_set_axis
      ~Paczynski1990Velocity.n_inputs
      ~Paczynski1990Velocity.n_outputs
      ~Paczynski1990Velocity.n_submodels
      ~Paczynski1990Velocity.name
      ~Paczynski1990Velocity.outputs
      ~Paczynski1990Velocity.param_names
      ~Paczynski1990Velocity.param_sets
      ~Paczynski1990Velocity.parameter_constraints
      ~Paczynski1990Velocity.parameters
      ~Paczynski1990Velocity.return_units
      ~Paczynski1990Velocity.separable
      ~Paczynski1990Velocity.standard_broadcasting
      ~Paczynski1990Velocity.stds
      ~Paczynski1990Velocity.sync_constraints
      ~Paczynski1990Velocity.tied
      ~Paczynski1990Velocity.uses_quantity
      ~Paczynski1990Velocity.v_0

   .. rubric:: Methods Summary

   .. autosummary::

      ~Paczynski1990Velocity.__call__
      ~Paczynski1990Velocity.coerce_units
      ~Paczynski1990Velocity.copy
      ~Paczynski1990Velocity.deepcopy
      ~Paczynski1990Velocity.evaluate
      ~Paczynski1990Velocity.get_bounding_box
      ~Paczynski1990Velocity.has_inverse
      ~Paczynski1990Velocity.input_shape
      ~Paczynski1990Velocity.output_units
      ~Paczynski1990Velocity.prepare_inputs
      ~Paczynski1990Velocity.prepare_outputs
      ~Paczynski1990Velocity.rename
      ~Paczynski1990Velocity.render
      ~Paczynski1990Velocity.set_slice_args
      ~Paczynski1990Velocity.strip_units_from_tree
      ~Paczynski1990Velocity.sum_of_implicit_terms
      ~Paczynski1990Velocity.with_units_from_data
      ~Paczynski1990Velocity.without_units_for_data

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: bbox_with_units
   .. autoattribute:: bounding_box
   .. autoattribute:: bounds
   .. autoattribute:: col_fit_deriv
   .. autoattribute:: cov_matrix
   .. autoattribute:: eqcons
   .. autoattribute:: fit_deriv
   .. autoattribute:: fittable
   .. autoattribute:: fixed
   .. autoattribute:: has_user_bounding_box
   .. autoattribute:: has_user_inverse
   .. autoattribute:: ineqcons
   .. autoattribute:: input_units
   .. autoattribute:: input_units_allow_dimensionless
   .. autoattribute:: input_units_equivalencies
   .. autoattribute:: input_units_strict
   .. autoattribute:: inputs
   .. autoattribute:: inverse
   .. autoattribute:: linear
   .. autoattribute:: meta
   .. autoattribute:: model_constraints
   .. autoattribute:: model_set_axis
   .. autoattribute:: n_inputs
   .. autoattribute:: n_outputs
   .. autoattribute:: n_submodels
   .. autoattribute:: name
   .. autoattribute:: outputs
   .. autoattribute:: param_names
   .. autoattribute:: param_sets
   .. autoattribute:: parameter_constraints
   .. autoattribute:: parameters
   .. autoattribute:: return_units
   .. autoattribute:: separable
   .. autoattribute:: standard_broadcasting
   .. autoattribute:: stds
   .. autoattribute:: sync_constraints
   .. autoattribute:: tied
   .. autoattribute:: uses_quantity
   .. autoattribute:: v_0

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: coerce_units
   .. automethod:: copy
   .. automethod:: deepcopy
   .. automethod:: evaluate
   .. automethod:: get_bounding_box
   .. automethod:: has_inverse
   .. automethod:: input_shape
   .. automethod:: output_units
   .. automethod:: prepare_inputs
   .. automethod:: prepare_outputs
   .. automethod:: rename
   .. automethod:: render
   .. automethod:: set_slice_args
   .. automethod:: strip_units_from_tree
   .. automethod:: sum_of_implicit_terms
   .. automethod:: with_units_from_data
   .. automethod:: without_units_for_data
